--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Ejercicio de selectores-PW1</title>
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
 
   <body>
@@ -16,7 +16,7 @@
 
       <p>
         Aunque los inicios de
-        <a href="https://es.wikipedia.org/wiki/Internet">Internet</a> se
+        <a href="https://es.wikipedia.org/wiki/Internet%22%3EInternet</a> se
         remontan a los años sesenta, no ha sido hasta los años noventa cuando,
         gracias a la Web, se ha extendido su uso por todo el mundo. En pocos
         años, la Web ha evolucionado enormemente: se ha pasado de páginas
@@ -33,10 +33,10 @@
         tecnología, con el
         <em class="especial">Lenguaje de marcas de hipertexto</em> (<span
           >Hypertext Markup Language</span >,
-           <a href="https://es.wikipedia.org/wiki/HTML">HTML</a>) y con las
+           <a href="https://es.wikipedia.org/wiki/HTML%22%3EHTML</a>) y con las
         <em class="especial">Hojas de estilo en cascada</em> (<span
           >Cascading Style Sheets</span>, 
-          <a href="https://es.wikipedia.org/wiki/CSS">CSS</a>).
+          <a href="https://es.wikipedia.org/wiki/CSS%22%3ECSS</a>).
       </p>
 
       <p>
